k8s/03-ledger-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-service
  namespace: banking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-service
  template:
    metadata:
      labels:
        app: ledger-service
    spec:
      containers:
        - name: ledger-service
          image: wallet-system/ledger-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-service
  namespace: banking-system
spec:
  type: ClusterIP
  ports:
    - port: 50052
      targetPort: 50052
  selector:
    app: ledger-service
