k8s/12-fx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-service
  namespace: banking-system
  labels:
    app: fx-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fx-service
  template:
    metadata:
      labels:
        app: fx-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      terminationGracePeriodSeconds: 20
      containers:
        - name: fx-service
          image: wallet-system/fx-service:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 50055
              name: grpc
            - containerPort: 8086
              name: http
            - containerPort: 9096
              name: metrics
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9096
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9096
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: fx-service
  namespace: banking-system
  labels:
    app: fx-service
spec:
  type: ClusterIP
  ports:
    - port: 50055
      targetPort: 50055
      name: grpc
    - port: 8086
      targetPort: 8086
      name: http
    - port: 9096
      targetPort: 9096
      name: metrics
  selector:
    app: fx-service
